fix color in dark mode

--- a/assets/styles/colors.css
+++ b/assets/styles/colors.css
@@ -74,6 +74,6 @@ html {
 @media (prefers-color-scheme: dark) {
   html {
     /* --paper: var(--black); */
-    --ink: var(--white);
+    /* --ink: var(--white); */
   }
 }
